<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewIntro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:shadowColor="#C0C0C0"
                android:shadowDx="12"
                android:shadowDy="12"
                android:shadowRadius="8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/Intro1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textViewIntro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/Intro2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewPurpose1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="casual"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Purpose1" />

            <TextView
                android:id="@+id/textViewPurpose2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="casual"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Purpose2" />

            <TextView
                android:id="@+id/textViewIntroPurpoe3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="casual"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Purpose3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textViewIntro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/Intro3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonUniBall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7.5dp"
                    android:layout_marginRight="7.5dp"
                    android:layout_weight="1"
                    android:text="@string/Shop1"
                    app:backgroundTint="#000000" />

                <Button
                    android:id="@+id/buttonArtline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Shop2"
                    app:backgroundTint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSarasa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7.5dp"
                    android:layout_marginRight="7.5dp"
                    android:layout_weight="1"
                    android:text="@string/Shop3"
                    app:backgroundTint="#000000" />

                <Button
                    android:id="@+id/buttonZebra"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Shop4"
                    app:backgroundTint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDescription1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/Description2"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonShowList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ButtonDescription2"
                    app:backgroundTint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDescription2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/Description1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonAddToWishList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/ButtonDescription1"
                    app:backgroundTint="#000000" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>